--- a/web/sites/default/themes/custom/ncwtheme/src/sass/displays/publications.scss
+++ b/web/sites/default/themes/custom/ncwtheme/src/sass/displays/publications.scss
@@ -353,6 +353,9 @@ body.node--type-publication{
         flex-direction: row;
         justify-content: space-between;
       }
+      .field__item {
+        margin-top: 0;
+      }
       .field-name-node-title{
         h2{
           padding-top: 1rem;
