--- a/web/sites/default/themes/custom/ncwtheme/src/sass/layout/body.scss
+++ b/web/sites/default/themes/custom/ncwtheme/src/sass/layout/body.scss
@@ -154,6 +154,11 @@ body {
   padding: 0;
 }
 
+.slideshow-title.row{
+  margin-left: 0;
+  margin-right: 0;
+}
+
 /* Labels */
 span.label, span.pages{
   font-family: 'Open Sans',sans-serif;
